--- a/Praktikum/12.Logika.html
+++ b/Praktikum/12.Logika.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Operator Aritmatika</title>
+    <title>Operator Logika</title>
   </head>
   <body>
     <script>
@@ -9,8 +9,8 @@
       var kamu = 15;
       var benar = aku > kamu;
       var salah = aku < kamu;
-      var hasil = benar && salah;
-      document.write(`${benar} && ${salah} = ${hasil} <br/>`);
+      var hasil = benar && benar;
+      document.write(`${benar} && ${benar} = ${hasil} <br/>`);
       var hasil = benar || salah;
       document.write(`${benar} || ${salah} = ${hasil} <br/>`);
       var hasil = !benar;
