--- a/Praktikum/11.Perbandingan.html
+++ b/Praktikum/11.Perbandingan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Operator Aritmatika</title>
+    <title>Operator Perbandingan</title>
   </head>
   <body>
     <script>
